# jetson_media

./: CMakeLists.txt  README.md  camera_jetson
application/: camera_preview.cpp
camera_config/: camera_dev.json  parse_camera_config.cpp
camera_utils/: .camera_manager.cpp.swp  camera.hpp  camera_interface.h  camera_manager.cpp  camera_manager.h  camera_manager_test.cpp  test.cpp  v4l2.cpp
common/: jetson_v4l2.c  jetson_v4l2.h
